# reactos

./: CMakeLists.txt
boot/bootdata/: hivesys.inf
dll/win32/kernel32/winnls/string/: lang.c
dll/win32/msrle32/: msrle32.c
dll/win32/winmm/: mci.c
drivers/bus/acpi/acpica/include/platform/: acwin64.h
ntoskrnl/ex/: init.c  uuid.c
ntoskrnl/io/iomgr/: driver.c
ntoskrnl/mm/: section.c
sdk/include/psdk/: winuser.h
sdk/lib/atl/: atlbase.h
sdk/lib/rtl/amd64/: unwind.c
sdk/tools/hhpcomp/: CMakeLists.txt
sdk/tools/mkisofs/: CMakeLists.txt
